InstanceStatus に deleted を追加 (#36)
