# openapi/openapi.yml
@@ -811,8 +811,12 @@ components:
       type: "string"
       enum:
         - "building"
+        - "starting"
         - "running"
+        - "stopping"
         - "stopped"
+        - "deleting"
+        - "deleted"
       example: "running"
     InstanceOperation:
       type: "string"
