# server/handler/openapi/oas_validators_gen.go
@@ -468,9 +468,17 @@ func (s InstanceStatus) Validate() error {
 	switch s {
 	case "building":
 		return nil
+	case "starting":
+		return nil
 	case "running":
 		return nil
+	case "stopping":
+		return nil
 	case "stopped":
+		return nil
+	case "deleting":
+		return nil
+	case "deleted":
 		return nil
 	default:
 		return errors.Errorf("invalid value: %v", s)
